--- a/blogs/ACT(summary).html
+++ b/blogs/ACT(summary).html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Pair Trading and Options: Quantitative Finance Insights | Blogs & Insights | Sarah's Portfolio</title>
+  <title>ACT Demystified | Blogs & Insights | Sarah's Portfolio</title>
   <link rel="icon" type="image/x-icon" href="data:image/x-icon;base64," />
   <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
   <link rel="stylesheet" href="../css/blogs/gradCAM(summary).css" />
@@ -52,166 +52,133 @@
       <nav class="breadcrumb">
         <a href="../blogs.html">Insights</a>
         <span>/</span>
-        <span class="current">Pair Trading and Options: Quantitative Finance Insights</span>
+        <span class="current">ACT Demystified</span>
       </nav>
       <article class="blog-article">
-        <h1 class="blog-title">Pair Trading and Options: Practical Insights in Quantitative Finance</h1>
-        <p class="blog-date">Published on April 7, 2025</p>
+        <h1 class="blog-title">ACT Demystified: Action Chunking with Transformers for Robotic Manipulation</h1>
+        <p class="blog-date">Published on July 6, 2025</p>
 
         <section class="blog-section">
-          <h2>Understanding Options and Futures</h2>
+          <h2>Paper Overview</h2>
+          <p>
+            <strong>Paper Title:</strong> Learning Fine-Grained Bimanual Manipulation with Low-Cost Hardware (ACT: Action Chunking with Transformers)
+          </p>
+          <p>
+            ACT is a novel imitation learning algorithm that enables robots to perform complex, precise manipulation tasks using only a small number of human demonstrations. It was developed to address the challenges of fine-grained bimanual manipulation, such as threading a zip tie or opening a condiment cup, using affordable hardware and robust learning techniques[13].
+          </p>
+        </section>
+
+        <section class="blog-section">
+          <h2>Why ACT? The Challenge</h2>
           <ul>
-            <li>
-              <strong>Options:</strong> Derivative contracts that give the buyer the right, but not the obligation, to buy or sell an asset at a set price within a specific period. The buyer pays a premium for this right.
-              <br><em>Buying a stock is related to a call option; selling a stock is related to a put option.</em>
-            </li>
-            <li>
-              <strong>Futures:</strong> Contracts that obligate both the buyer and seller to transact an asset at a predetermined price on a future date. Both parties are bound to the contract.
-            </li>
+            <li><strong>Compounding Errors:</strong> Small mistakes in predicted actions can accumulate, causing the robot to fail at tasks that require precision.</li>
+            <li><strong>Non-Markovian Human Behavior:</strong> Human demonstrations often include pauses or correlated actions that are hard for simple policies to model.</li>
+            <li><strong>Noisy Demonstrations:</strong> Human data is variable—even for the same task, the way it’s done can change each time.</li>
           </ul>
-          <h4>Key Differences</h4>
+          <p>
+            Traditional imitation learning methods struggle with these issues, especially for tasks that need high-frequency, closed-loop control and visual feedback[13].
+          </p>
+        </section>
+
+        <section class="blog-section">
+          <h2>Core Innovations of ACT</h2>
           <ul>
-            <li><strong>Obligation vs. Right:</strong> Options give the buyer a right; futures create an obligation for both parties.</li>
-            <li><strong>Settlement:</strong> Options are usually cash-settled; futures often involve physical settlement.</li>
-            <li><strong>Execution:</strong> Options can be exercised anytime before expiry; futures only on the specified date.</li>
-            <li><strong>Profit/Loss:</strong> Options limit loss to the premium; futures expose both parties to unlimited profit/loss.</li>
+            <li><strong>Action Chunking:</strong> Instead of predicting one action at a time, ACT predicts a sequence (chunk) of actions for the next <em>k</em> steps. This reduces the effective task horizon and helps prevent errors from compounding.</li>
+            <li><strong>Temporal Ensembling:</strong> To keep robot motion smooth, ACT averages overlapping action predictions at each timestep, using exponential weights to prioritize recent observations.</li>
+            <li><strong>Conditional Variational Autoencoder (CVAE):</strong> ACT models the variability in human demonstrations by learning a distribution over action sequences, making it robust to noisy data.</li>
+            <li><strong>Transformer Architecture:</strong> ACT uses transformers to model long-range dependencies in both observations and actions, enabling it to learn complex, coordinated behaviors.</li>
           </ul>
         </section>
 
         <section class="blog-section">
-          <h2>Options as Hedging Tools</h2>
-          <ul>
-            <li>
-              <strong>Covered Call (Short-Call Hedge):</strong> Selling call options on owned stock to limit downside risk and earn premiums.
-              <br><em>If the stock price doesn’t rise significantly, the trader keeps the premium.</em>
-            </li>
-            <li>
-              <strong>Long Put Hedge:</strong> Buying put options to protect against price declines. If the stock price falls below the strike price, the option’s premium increases and offsets equity losses.
-            </li>
-          </ul>
-        </section>
-
-        <section class="blog-section">
-          <h2>Decoding Option Greeks</h2>
-          <ul>
-            <li>
-              <strong>Delta:</strong> Measures how much an option’s price changes with a 1-point move in the underlying asset.
-              <br><em>Delta for calls: 0 to 1; puts: 0 to -1. Indicates moneyness and hedge ratios.</em>
-            </li>
-            <li>
-              <strong>Gamma:</strong> Rate of change of Delta. High for at-the-money options, low for in/out-of-the-money.
-              <br><em>Delta is the first derivative of premium; Gamma is the second.</em>
-            </li>
-            <li>
-              <strong>Theta:</strong> Time decay; how much value an option loses as expiration approaches.
-              <br><em>Hurts buyers, benefits sellers. Premium = Intrinsic Value + Time Value (Theta affects time value).</em>
-            </li>
-            <li>
-              <strong>Vega:</strong> Sensitivity to volatility; higher volatility increases option value.
-              <br><em>Vega = Rate of change of premium / Change in Volatility.</em>
-            </li>
-            <li>
-              <strong>Rho:</strong> Sensitivity to interest rates. Positive for calls, negative for puts.
-              <br><em>Rho is less significant for most practical trading decisions.</em>
-            </li>
-          </ul>
-        </section>
-
-        <section class="blog-section">
-          <h2>Pair Trading: Mean Reversion and Statistical Arbitrage</h2>
-          <h3>Stock Selection and Rationale</h3>
-          <ul>
-            <li>
-              <strong>Chosen Pair:</strong> Apple (AAPL) and Microsoft (MSFT)
-              <ul>
-                <li>Combined market cap of $5.51 trillion (April 2025), representing 12% of the S&P 500.</li>
-                <li>Apple dominates in premium consumer hardware and ecosystem integration; Microsoft leads in enterprise cloud and AI.</li>
-                <li>Both are financially robust but have different innovation strategies (Microsoft invests more in R&D; Apple focuses on vertical integration).</li>
-              </ul>
-            </li>
-            <li>
-              <strong>Sectoral Trends (2019–2025):</strong>
-              <ul>
-                <li>Cloud computing and AI adoption (Microsoft’s Azure, OpenAI partnerships).</li>
-                <li>Hardware innovation and ecosystem lock-in (Apple’s “Apple Intelligence”).</li>
-              </ul>
-            </li>
-            <li>
-              <strong>Correlation Analysis:</strong> 3-month rolling correlation of 0.53 (2019–2025), indicating moderate positive co-movement.</li>
-            <li>
-              <strong>Cointegration:</strong> Augmented Dickey-Fuller (ADF) statistic of -3.42 (p &lt; 0.05), confirming a mean-reverting spread—ideal for pair trading.
-            </li>
-          </ul>
-        </section>
-
-        <section class="blog-section">
-          <h2>Data Collection and Preprocessing</h2>
-          <ul>
-            <li>
-              <strong>Historical Data:</strong> Daily adjusted close prices for AAPL and MSFT (Jan 1, 2019 – Dec 31, 2023) from Yahoo Finance.
-            </li>
-            <li>
-              <strong>Handling Missing Values:</strong> Linear interpolation fills gaps due to market holidays, ensuring a continuous timeline for analysis.
-            </li>
-            <li>
-              <strong>Normalization:</strong> Min-max scaling brings both stocks to a 0–1 range, allowing fair comparison and visualization.
-              <br><em>Normalized price = (Actual Price – Minimum Price) / (Maximum Price – Minimum Price)</em>
-            </li>
-            <li>
-              <strong>Visualization:</strong> Line charts of normalized prices and histograms of daily returns reveal trends and volatility.
-            </li>
-          </ul>
-        </section>
-
-        <section class="blog-section">
-          <h2>Backtesting the Pair Trading Strategy</h2>
+          <h2>How ACT Works: Step-by-Step</h2>
           <ol>
             <li>
-              <strong>Strategy Logic:</strong> Bet that two stocks that usually move together will return to their "normal" relationship if they temporarily drift apart.
-              <ul>
-                <li>If Apple rises sharply while Microsoft stays flat, sell Apple and buy Microsoft (and vice versa).</li>
-              </ul>
+              <strong>Action Chunking:</strong> Given the current observation (images and joint positions), ACT predicts the next <em>k</em> actions (target joint positions for both arms). This chunking reduces the number of decisions the policy must make, making learning easier and more stable.
             </li>
             <li>
-              <strong>Spread Calculation:</strong> Adjust for price differences using a hedge ratio (e.g., if MSFT moves ₹2 for every ₹1 AAPL moves, hedge ratio is 2).
+              <strong>Temporal Ensembling:</strong> At every timestep, ACT combines multiple predictions for the same action (from overlapping chunks) using a weighted average. This smooths out the robot’s movements and reduces the impact of prediction errors.
             </li>
             <li>
-              <strong>Trading Signals:</strong> Use Z-Score of the spread:
-              <ul>
-                <li>Z &gt; +1.5: Sell Apple, Buy Microsoft.</li>
-                <li>Z &lt; -1.5: Buy Apple, Sell Microsoft.</li>
-                <li>Exit when Z approaches zero.</li>
-              </ul>
+              <strong>CVAE Training:</strong> During training, ACT uses a CVAE to encode the variability in human demonstrations. The encoder compresses action sequences and joint data into a latent variable, while the decoder (policy) predicts action sequences conditioned on this variable and the current observation.
             </li>
             <li>
-              <strong>Performance Metrics:</strong>
-              <ul>
-                <li>Returns: Example—20.83% over five years (₹12,000 to ₹14,500).</li>
-                <li>Sharpe Ratio: Measures risk-adjusted return (e.g., 0.5 means ₹0.50 earned per ₹1 of risk).</li>
-                <li>Max Drawdown: Largest peak-to-trough loss (e.g., -50% if ₹10,000 drops to ₹5,000).</li>
-              </ul>
+              <strong>Transformer Backbone:</strong> Both the encoder and decoder use transformer layers to process sequences, allowing the model to capture complex temporal dependencies and coordinate multi-step actions.
             </li>
           </ol>
         </section>
 
         <section class="blog-section">
-          <h2>Performance Analysis and Improvements</h2>
+          <h2>Implementation Details</h2>
           <ul>
-            <li>
-              <strong>Robustness:</strong> The strategy exploits mean-reverting behavior, profiting when the price relationship normalizes.
-            </li>
-            <li>
-              <strong>Improvements:</strong>
-              <ul>
-                <li>Use machine learning models for missing value imputation (data cleaning).</li>
-                <li>Apply advanced normalization techniques (e.g., normal distribution) for better graphs and interpretation.</li>
-                <li>Adapt Z-score bands to volatility using machine learning for dynamic signal generation.</li>
-              </ul>
-            </li>
+            <li>Observations include four RGB images (from different camera angles) and joint positions for two robot arms.</li>
+            <li>Actions are the target joint positions for both arms over the next <em>k</em> timesteps.</li>
+            <li>Images are processed with ResNet18 backbones, and features are combined with joint data and the latent variable before being passed to the transformer.</li>
+            <li>Typical chunk size: <strong>k = 100</strong> (i.e., predict 2 seconds of actions at 50Hz).</li>
+            <li>Model size: ~80 million parameters; training takes about 5 hours on a single GPU.</li>
           </ul>
-          <p>
-            <em>This structured approach, combining statistical rigor and practical trading logic, forms the backbone of robust quantitative finance strategies.</em>
-          </p>
+        </section>
+
+        <section class="blog-section">
+          <h2>Experimental Results</h2>
+          <ul>
+            <li>ACT was tested on 6 real-world and 2 simulated bimanual manipulation tasks, such as opening a cup, threading velcro, and inserting batteries.</li>
+            <li>Each task used only 10–20 minutes of human demonstration data (50–100 episodes).</li>
+            <li><strong>Success rates:</strong> ACT achieved 80–96% on most real-world tasks, outperforming previous methods by a large margin.</li>
+            <li>On challenging tasks like Thread Velcro, perception limitations (e.g., low contrast) reduced success, highlighting areas for future improvement.</li>
+          </ul>
+        </section>
+
+        <section class="blog-section">
+          <h2>Key Techniques: At a Glance</h2>
+          <table>
+            <thead>
+              <tr>
+                <th>Technique</th>
+                <th>Purpose</th>
+                <th>Benefit</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Action Chunking</td>
+                <td>Predicts a sequence of actions at once</td>
+                <td>Reduces compounding errors, models complex behaviors</td>
+              </tr>
+              <tr>
+                <td>Temporal Ensembling</td>
+                <td>Combines overlapping predictions</td>
+                <td>Smoother, more accurate actions</td>
+              </tr>
+              <tr>
+                <td>CVAE</td>
+                <td>Models demonstration variability</td>
+                <td>Handles noisy, non-deterministic data</td>
+              </tr>
+              <tr>
+                <td>Transformers</td>
+                <td>Sequence modeling</td>
+                <td>Captures long-range dependencies</td>
+              </tr>
+            </tbody>
+          </table>
+        </section>
+
+        <section class="blog-section">
+          <h2>Limitations & Future Directions</h2>
+          <ul>
+            <li>ACT struggles with tasks that require very fine perception (e.g., unwrapping candies, opening flat ziploc bags) due to ambiguous visual cues or deformable objects.</li>
+            <li>Performance can be improved with more demonstration data, better perception models, or pretraining.</li>
+          </ul>
+        </section>
+
+        <section class="blog-section">
+          <h2>Takeaways</h2>
+          <ul>
+            <li>ACT enables low-cost robots to perform complex, precise tasks with minimal human demonstrations.</li>
+            <li>Combining action chunking, temporal ensembling, and transformer-based sequence modeling is key to its success.</li>
+            <li>ACT is a step forward for practical, accessible robot learning in real-world settings.</li>
+          </ul>
         </section>
 
         <div class="back-link">
